kubernetes/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: pulse
spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
    - protocol: TCP
      port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-static-service
  namespace: pulse
spec:
  type: ClusterIP
  selector:
    app: backend-static-app
  ports:
    - protocol: TCP
      port: 80
