kubernetes/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: pulse
spec:
  rules:
    - host: gold-giveaway.ru
      http:
        paths:
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          - path: /backend/static
            pathType: Prefix
            backend:
              service:
                name: backend-static-service
                port:
                  number: 80
